<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('plant_notes', function (Blueprint $table) {
            $table->string('plant_note_id', 36)->primary();
            $table->string('plant_id', 36)->onDelete('cascade');
            $table->text('description');
            $table->date('note_date');
            $table->string('keywords')->nullable();
            $table->string('attachment_path')->nullable();
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('plant_notes');
    }
};
















